--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="img.jpeg" alt="my picture" class="profile-picture">
-            <h1>mohamed ibrahim</h1>
+            <img src="profile.jpeg" alt="my picture" class="profile-picture">
+            <h1>SIKKANDAR ALI</h1>
             <h6>Iam fresher Software developer and Graphics designer </h6>
         </div>
     </header>
@@ -32,7 +32,7 @@
     <section id="about">
         <div class="section-content">
             <h2>Aboutme</h2>
-            <p>Hello, I'm mohamed ibrahim,<br>
+            <p>Hello, I'm SIKKANDAR ALI,<br>
                Iam fresher Software developer and Graphics designer <br>
 
             
@@ -44,17 +44,17 @@
         <div class="section-content">
             <h2>Education</h2>
             <ul>
-                <li><b>SYED AMMAL HER ,SEC school,Ramanathapuram.</b><br>
+                <li><b>BUKHARIYA MATRIC HIGHER SECONDARY SCHOOL,DEVIPATTINAM.</b><br>
                     SSLC <br>
-                    65.20%
+                    70%
                 </li>
-                <li><b>SYED AMMAL HER,SEC school,Ramanathapuram.</b><br>
+                <li><b>BUKHARIYA MATRIC HIGHER SECONDARY SCHOOL,DEVIPATTINAM</b><br>
                     HSC <br>
                     74.17%          
                 </li>
-                <li><b>SYED AMMAL ART'S & SCIENCE college,Ramanathapuram.</b><br>
+                <li><b>SYED AMMAL ARTS & SCIENCE college,Ramanathapuram.</b><br>
                     BCA <br>
-                    74.4 upto 2023
+                    78% upto 2023
                 </li>
             </ul>
             <p> Expected Graduation: 2024</p>
@@ -84,14 +84,12 @@
                 <ul>
                     <li><b>Additional skills</b></li>
 
-                    Figma.
-                    Unity game engine.
-                    Blender.
-                    Adobe photoshop.
+                    Figma,
+                    Unity game engine,
                     Adobe illustration.
                 </ul>  
                 </li><br>
-                <li><b>Software:</b> Google Chrome,</li>
+                <li><b>Software:</b> Google Chrome.</li>
             </ul>
 
             <ul>
@@ -99,8 +97,8 @@
                     <p><b>Soft Skills</b></p>
                 </u>
                 <li><b>Communication:</b><br>
-                    TAMIL
-                    ENGLISHS
+                    TAMIL,
+                    ENGLISH.
 
                 <li> <b>Leadership</b>:
                     managing a study group, coaching a sports team <br>
@@ -140,7 +138,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 mohamed ibrahim</p>
+        <p>&copy; 2023 SIKKANDAR ALI</p>
     </footer>
 
 
